236 fix modals on narrow screen (#281)
* Fixed cropper's modal which was broken, all others were okay

* Fixed modals a little bit more down

* Fixed modals

* Fix modals

* Fix images in game

* Fix small issue

---------

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -7,7 +7,7 @@
   background: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: center;
   z-index: 1000;
 }
 
@@ -40,7 +40,6 @@
   height: 80vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   max-width: none;
   max-height: none;
 }
@@ -50,9 +49,14 @@
   height: 95vh;
 }
 
+@media (max-width: 767px) {
+  .modal-overlay {
+    padding-top: 40px;
+  }
+}
+
 @media (max-width: 767px) and (max-height: 270px) {
   .modal-overlay[data-modal-type='image-cropper'] .modal-content {
-    top: 70%;
     width: 90vw;
     height: 60vh;
   }
@@ -60,7 +64,6 @@
 
 @media (max-width: 767px) and (min-height: 271px) and (max-height: 450px) {
   .modal-overlay[data-modal-type='image-cropper'] .modal-content {
-    top: 40%;
     width: 90vw;
     height: 70vh;
   }
@@ -68,7 +71,6 @@
 
 @media (max-width: 767px) and (min-height: 451px) and (max-height: 720px) {
   .modal-overlay[data-modal-type='image-cropper'] .modal-content {
-    top: 25%;
     width: 90vw;
     height: 70vh;
   }
@@ -76,7 +78,6 @@
 
 @media (max-width: 767px) and (min-height: 721px) and (max-height: 1150px) {
   .modal-overlay[data-modal-type='image-cropper'] .modal-content {
-    top: 15%;
     width: 90vw;
     height: 70vh;
     max-height: 600px;
@@ -88,7 +89,6 @@
     width: 90vw;
     height: 70vh;
     max-height: 600px;
-    bottom: 10%;
   }
 }
 
